ERROR.txt
parser.c:548:47: error: request for member ‘data’ in something not a structure or union
    chba = (TReduction(&St, i + 1, global_table.data->LInstr));


parser.c: In function ‘_return’:
parser.c:737:44: error: request for member ‘data’ in something not a structure or union
  string *LastVar = ReadNameVar(global_table.data->LInstr); // funkce na cteni nazvu posledni instrukce
                                            ^
parser.c: In function ‘_for’:
parser.c:766:30: error: request for member ‘data’ in something not a structure or union
     LtableInsert(global_table.data->LTable, &Label_1, TOK_STRING);    // vlozeni do lokalni tabulky symbolu
                              ^
parser.c:778:47: error: request for member ‘data’ in something not a structure or union
     string *LastVar = ReadNameVar(global_table.data->LInstr);
                                               ^
parser.c:785:30: error: request for member ‘data’ in something not a structure or union
     LtableInsert(global_table.data->LTable, &Label_2, TOK_STRING);
                              ^
parser.c: In function ‘_if’:
parser.c:947:47: error: request for member ‘data’ in something not a structure or union
     string *LastVar = ReadNameVar(global_table->data->LInstr); // funkce na cteni nazvu posledni instrukce
                                               ^
parser.c:954:30: error: request for member ‘data’ in something not a structure or union
     LtableInsert(global_table.data->LTable, &Label_1, TOK_STRING);    // vlozeni do lokalni tabulky symbolu
                              ^
parser.c:968:30: error: request for member ‘data’ in something not a structure or union
     LtableInsert(global_table.data->LTable, &Label_2, TOK_STRING);



